# wfh-logbook

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_bot_tables.py
app/: __init__.py  config.py  db.py  logging_config.py  main.py  models.py  schemas.py
app/api/: backups.py  days.py  days_service.py  exports.py  health.py  review_queue.py
app/backup/: __init__.py  snapshot.py
app/exporters/: __init__.py  __main__.py  bundle.py  common.py  csv.py  xlsx.py
app/notifier/: __init__.py  base.py  conversation.py  grammar.py  polling.py  reminders.py  service.py  telegram.py  webhook.py
app/sessions/: __init__.py  __main__.py  builder.py  persistence.py  rules.py  scheduler.py
app/unifi/: __init__.py  base.py  client.py  poller.py  udm.py
app/web/: __init__.py  routes.py  year_stats.py
app/web/static/: styles.css
app/web/templates/: _day_card.html  base.html  calendar.html  day_detail.html  review.html  review_queue.html  system.html  year.html
docs/: ARCHITECTURE.md  DEPLOYMENT.md  METHODOLOGY.md  OPERATIONS.md
tests/: conftest.py  test_api_days.py  test_api_export.py  test_backup.py  test_backups_api.py  test_bulk_lock.py  test_bundle.py  test_health.py  test_health_enriched.py  test_immutability.py  test_phase10_lockall.py  test_phase10_web.py  test_phase11_mobile.py  test_phase9_backlog.py  test_reminders.py  test_review_queue.py  test_scheduler_and_cli.py  test_sessionisation.py  test_telegram_adapter.py  test_telegram_conversation.py  test_telegram_grammar.py  test_telegram_service.py  test_unifi_client.py  test_versioning.py  test_year_stats.py
tests/fixtures/: telegram_updates.json  unifi_clients_active.json  unifi_wlanconf.json
tools/: fetch_telegram_sample.py  fetch_unifi_sample.py  live_poll_check.py
